force-app/main/default/objects/User_Vote__c/User_Vote__c.object-meta.xml
<CustomObject>
    <label>User Vote</label>
    <nameField>
        <label>User Vote Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Votes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>