force-app/main/default/objects/User_Vote__c/fields/Answer_Option_Id__c.field-meta.xml
<CustomField>
    <fullName>Answer_Option_Id__c</fullName>
    <label>Answer Option</label>
    <referenceTo>Answer_Option__c</referenceTo>
    <relationshipLabel>User Votes</relationshipLabel>
    <relationshipName>Aswer_Option_User_Votes</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>