force-app/main/default/objects/User_Vote__c/fields/Question_Answer_Option__c.field-meta.xml
<CustomField>
    <fullName>Question_Answer_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Answer Option</label>
    <referenceTo>Question_Answer_Option__c</referenceTo>
    <relationshipLabel>User Votes</relationshipLabel>
    <relationshipName>User_Votes</relationshipName>
    <type>Lookup</type>
</CustomField>