force-app/main/default/objects/User_Vote__c/fields/Survey_Question_Id_del__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question_Id_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Question</label>
    <referenceTo>Survey_Question__c</referenceTo>
    <relationshipLabel>User Votes</relationshipLabel>
    <relationshipName>User_Votes_del</relationshipName>
    <type>Lookup</type>
</CustomField>